--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -313,7 +313,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Generate platform-specific pyproject.toml
         run: |
-          dnf update && dnf install python
+          dnf update && dnf install -y python
           cp pyproject.toml pyproject.toml.bak
           python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
           if [ "${{ runner.os }}" == "Windows" ]; then
