fix(workflow): Add poetry to PATH in RPM build job

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -326,6 +326,8 @@ jobs:
         run: |
           dnf install -y rpm-build rpmlint python3-devel python3-setuptools python3-pip python3-wheel pyproject-rpm-macros poetry
           python -m pip install toml
+      - name: Add Poetry to PATH
+        run: echo "/usr/bin" >> $GITHUB_PATH
       - name: Create source tarball
         run: |
           mkdir -p ~/rpmbuild/SOURCES/
