--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -314,9 +314,9 @@ jobs:
       - name: Generate platform-specific pyproject.toml
         run: |
           dnf install -y python3 python3-pip
-          pip install toml
+          python3 -m pip install toml
           cp pyproject.toml pyproject.toml.bak
-          python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
+          python3 scripts/generate_pyproject_toml.py pyproject.toml fedora > pyproject.toml.tmp
           if [ "${{ runner.os }}" == "Windows" ]; then
             mv -Force pyproject.toml.tmp pyproject.toml
           else
