feat(workflow): Add diagnostic step for requirements.txt in PyInstaller build

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -212,6 +212,8 @@ jobs:
           poetry self add poetry-plugin-export
           poetry export -f requirements.txt --output requirements.tmp && grep -v "wxPython" requirements.tmp > requirements.txt && rm requirements.tmp
           pip install pyinstaller
+      - name: List files before PyInstaller build
+        run: ls -la
       - name: Build Package (Windows)
         if: runner.os == 'Windows'
         run: pyinstaller --log-level=DEBUG packaging/pyinstaller/specs/devildex_windows.spec --distpath dist/${{ matrix.os }}
