--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -12,6 +12,9 @@ jobs:
     runs-on: windows-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
+      - name: Download Windows artifact
+        uses: actions/download-artifact@v4
+        with:
           name: devildex-windows-latest-bundle
           path: build/
           run-id: ${{ github.event.workflow_run.id }}
@@ -151,13 +154,11 @@ jobs:
       - name: Download PyInstaller Windows bundle
         uses: actions/download-artifact@v4
         with:
-          name: devildex-windows-bundle
+          name: devildex-windows-latest-bundle
           path: build/windows-latest/
           run-id: ${{ github.event.workflow_run.id }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           repository: ${{ github.repository }}
-      - name: List downloaded files (PyInstaller Windows)
-        run: ls -R build/windows-latest/
 
       - name: Test Built Application (PyInstaller Windows)
         run: |
