--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -146,7 +146,7 @@ jobs:
         run: ls -R build/wheel/
 
       - name: Install libnotify
-        run: sudo apt-get update && sudo apt-get install -y libnotify4 libsdl2-2.0-0
+        run: sudo apt-get update && sudo apt-get install -y libnotify4 libsdl2-2.0-0 libgirepository1.0-dev gobject-introspection gir1.2-gtk-3.0 gir1.2-webkit2-4.1 python3-gi python3-gi-cairo python3-wxgtk4.0 python3-wxgtk-webview4.0
 
       - name: Test Installed Wheel (Linux)
         run: |
