fix(workflow): Fix artifact names and dependencies

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -227,6 +227,7 @@ jobs:
           fi
       - name: Set runner.os to lowercase
         id: lower_os
+        shell: bash
         run: echo "os_name=$(echo ${{ runner.os }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
 
       - name: Upload Bundle Artifact
