--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -14,9 +14,19 @@ permissions:
   pull-requests: write
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    outputs:
+      test_packages: ${{ steps.get_vars.outputs.test_packages }}
+    steps:
+      - id: get_vars
+        run: echo "test_packages=${{ vars.TEST_PACKAGES || '["all"]' }}" >> $GITHUB_OUTPUT
+
   build-linux-wheel:
+    needs: setup
     name: Build Linux Wheel
     runs-on: ubuntu-latest
+    if: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'linux-wheel') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -64,8 +74,10 @@ jobs:
           path: dist/*.whl
 
   build-macos-wheel:
+    needs: setup
     name: Build macOS Wheel
     runs-on: macos-latest
+    if: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'macos-wheel') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -95,8 +107,10 @@ jobs:
           path: dist/*.whl
 
   build-windows-wheel:
+    needs: setup
     name: Build Windows Wheel
     runs-on: windows-latest
+    if: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'windows-wheel') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -123,8 +137,10 @@ jobs:
           path: dist/*.whl
 
   build-deb-package:
+    needs: setup
     name: Build Debian Package
     runs-on: ubuntu-22.04
+    if: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'debian-package') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -163,7 +179,9 @@ jobs:
           path: dist/deb/*.deb
 
   build-package:
+    needs: setup
     name: Build Pyinstaller Pkg
+    if: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'windows-bundle') || contains(fromJSON(needs.setup.outputs.test_packages), 'macos-bundle') || contains(fromJSON(needs.setup.outputs.test_packages), 'linux-bundle') }}
     strategy:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
@@ -311,8 +329,10 @@ jobs:
         uses: actions/deploy-pages@v4
 
   build-rpm-package:
+    needs: setup
     name: Build RPM Package
     runs-on: ubuntu-latest
+    if: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'rpm-package') }}
     container:
       image: fedora:latest
     steps:
@@ -353,8 +373,7 @@ jobs:
           name: devildex-rpm-package
           path: ~/rpmbuild/RPMS/noarch/*.rpm
 
-  create-and-upload-release:
-    name: Create and Upload Release
+  check-build-status:
     runs-on: ubuntu-latest
     needs:
       - build-windows-wheel
@@ -363,6 +382,28 @@ jobs:
       - build-macos-wheel
       - build-deb-package
       - build-rpm-package
+    outputs:
+      run_release: ${{ steps.check_status.outputs.run_release }}
+    steps:
+      - id: check_status
+        run: |
+          if [[ "${{ needs.build-windows-wheel.result }}" == "success" || \
+                "${{ needs.build-package.result }}" == "success" || \
+                "${{ needs.build-linux-wheel.result }}" == "success" || \
+                "${{ needs.build-macos-wheel.result }}" == "success" || \
+                "${{ needs.build-deb-package.result }}" == "success" || \
+                "${{ needs.build-rpm-package.result }}" == "success" ]]; then
+            echo "run_release=true" >> $GITHUB_OUTPUT
+          else
+            echo "run_release=false" >> $GITHUB_OUTPUT
+          fi
+
+  create-and-upload-release:
+    name: Create and Upload Release
+    runs-on: ubuntu-latest
+    needs:
+      - check-build-status
+    if: ${{ needs.check-build-status.outputs.run_release == 'true' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
