fix(workflow): Fix fromJSON parsing error

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -20,7 +20,7 @@ jobs:
       test_packages: ${{ steps.get_vars.outputs.test_packages }}
     steps:
       - id: get_vars
-        run: echo "test_packages=${{ vars.TEST_PACKAGES || '["all"]' }}" >> $GITHUB_OUTPUT
+        run: echo "test_packages=${{ toJSON(fromJSON(vars.TEST_PACKAGES || '["all"]')) }}" >> $GITHUB_OUTPUT
 
   build-linux-wheel:
     needs: setup
